--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
                 <!-- cards -->
                 <ul class="cards" v-for="film in arrayRicerca">
                     <li> <img :src="ricercaPoster(film)" alt=""> </li>
-                    <li> Titolo: {{ film.title }} </li>
-                    <li> Titolo in lingua originale: {{ film.original_title }} </li>
-                    <!-- <li> Lingua originale: {{ film.original_language }} </li> -->
+                    <!-- <li> Titolo: {{ film.title }} </li>
+                    <li> Titolo in lingua originale: {{ film.original_title }} </li> -->
+                    <li> Titolo: {{ film.title ? film.title : film.name }} </li>
+                    <li> Titolo in lingua originale: {{ film.original_title ? film.original_title : film.original_name}}</li>
                     <!-- se a img/ e .png metto "" non si visualizza lingua quando non presente bandiera -->
                     <li class="flags" v-if="mieFlags.includes(film.original_language)">
                         <img :src=" 'img/' + film.original_language + '.png' " :alt="film.original_language">
