inserisco logo png trasparente + inizio html + css

--- a/index.html
+++ b/index.html
@@ -16,31 +16,37 @@
     <body>
         <div id="root">
             <div class="container">
-                <h2>Boolflix</h2>
-                <!-- search -->
-                <div class="search">
-                    <input type="search" name="" value="" v-model="ricercaUtente" @keyup.enter="ricercaFilm()" placeholder="Scrivi il titolo di un film">
-                    <button type="button" name="button" @click="ricercaFilm()">Vai!</button>
-                </div>
-                <!-- cards -->
-                <ul class="cards" v-for="film in arrayRicerca">
-                    <li> <img :src="ricercaPoster(film)" alt=""> </li>
-                    <!-- <li> Titolo: {{ film.title }} </li>
-                    <li> Titolo in lingua originale: {{ film.original_title }} </li> -->
-                    <li> Titolo: {{ film.title ? film.title : film.name }} </li>
-                    <li> Titolo in lingua originale: {{ film.original_title ? film.original_title : film.original_name}}</li>
-                    <!-- se a img/ e .png metto "" non si visualizza lingua quando non presente bandiera -->
-                    <li class="flags" v-if="mieFlags.includes(film.original_language)">
-                        <img :src=" 'img/' + film.original_language + '.png' " :alt="film.original_language">
-                    </li>
-                    <li v-else> Lingua originale: {{ film.original_language }} </li>
-                    <li> Voto: {{ film.vote_average }} </li>
-                    <!-- migliorare visualizzaz stelle -->
-                    <li class="star">
-                            <i class="fas fa-star" v-for="star in film.vote_average"></i>
-                            <i class="far fa-star" v-for=" star in (starAverage - film.vote_average)"></i>
-                    </li>
-                </ul>
+                <header>
+                    <!-- logo -->
+                    <img class="logo-boolflix" src="img/logoBoolflix.png" alt="">
+                    <!-- search -->
+                    <div class="search">
+                        <input type="search" name="" value="" v-model="ricercaUtente" @keyup.enter="ricercaFilm()" placeholder="Scrivi il titolo di un film">
+                        <button type="button" name="button" @click="ricercaFilm()">Vai!</button>
+                    </div>
+                </header>
+                <main>
+                    <!-- cards -->
+                    <ul class="cards" v-for="film in arrayRicerca">
+                        <li> <img :src="ricercaPoster(film)" alt=""> </li>
+                        <!-- <li> Titolo: {{ film.title }} </li>
+                        <li> Titolo in lingua originale: {{ film.original_title }} </li> -->
+                        <li> Titolo: {{ film.title ? film.title : film.name }} </li>
+                        <li> Titolo in lingua originale: {{ film.original_title ? film.original_title : film.original_name}}</li>
+                        <!-- se a img/ e .png metto "" non si visualizza lingua quando non presente bandiera -->
+                        <li class="flags" v-if="mieFlags.includes(film.original_language)">
+                            <img :src=" 'img/' + film.original_language + '.png' " :alt="film.original_language">
+                        </li>
+                        <li v-else> Lingua originale: {{ film.original_language }} </li>
+                        <li> Voto: {{ film.vote_average }} </li>
+                        <!-- migliorare visualizzaz stelle -->
+                        <li class="star">
+                                <i class="fas fa-star" v-for="star in film.vote_average"></i>
+                                <i class="far fa-star" v-for=" star in (starAverage - film.vote_average)"></i>
+                        </li>
+                    </ul>
+                </main>
+
             </div>
         </div>
         <!-- js -->
